Envoi du template